--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Ironavirus</title>
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <meta name="theme-color" content="#fef600" />
+    <meta name="theme-color" content="#211b1f" />
 
     <style>
       html {
