--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,6 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="theme-color" content="#211b1f" />
-
     <style>
       html {
         height: 100%;
@@ -60,15 +59,15 @@
 
     <meta
       name="description"
-      content="在这些困难和不寻常的时刻"
+      content="在这些异常和困难的时期，有时很难从噪音中分辨出真实的信息。 或者，您可以创建自己的消息，然后像酷孩子一样听。In these unusual and difficult times it's sometimes difficult to sort out the real message from the noise. Or you could just create your own message and listen to that like the cool kids do"
     />
     <meta
       property="og:description"
-      content="在这些困难和不寻常的时刻"
+      content="在这些异常和困难的时期，有时很难从噪音中分辨出真实的信息。 或者，您可以创建自己的消息，然后像酷孩子一样听。In these unusual and difficult times it's sometimes difficult to sort out the real message from the noise. Or you could just create your own message and listen to that like the cool kids do"
     />
     <meta
       name="twitter:description"
-      content="在这些困难和不寻常的时刻"
+      content="在这些异常和困难的时期，有时很难从噪音中分辨出真实的信息。 或者，您可以创建自己的消息，然后像酷孩子一样听。In these unusual and difficult times it's sometimes difficult to sort out the real message from the noise. Or you could just create your own message and listen to that like the cool kids do"
     />
     
     <meta name="geo.region" content="CN-91" />
@@ -88,7 +87,7 @@
     <meta property="og:locale" content="en_pi" />
     <meta property="og:title" content="Ironavirus" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://wei-zang.com" />
+    <meta property="og:url" content="https://ironavirus.web.app/" />
     <meta property="og:site_name" content="Ironavirus" />
     <meta property="og:image" content="png/open-graph.png" />
     <meta property="og:image:type" content="image/png" />
@@ -210,10 +209,10 @@
     <noscript>
       <h2>
           <a href="https://listingslab.com/pwa" target="_blank" rel="noopener noreferrer">
-              Listingslab Progressive Web Apps
+              基于 Listingslab's Progressive Web Apps
           </a>
       </h2>
-      <p>我们如何进行Google Lighthouse审核</p>
+      <p>In these unusual and difficult times it's sometimes difficult to sort out the real message from the noise. Or you could just create your own message and listen to that like the cool kids do</p>
     </noscript>
 
     <div id="app" class="screen">
