--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,22 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta name="theme-color" content="#211b1f" />
+    <link
+      rel="apple-touch-icon"
+      href="png/apple-touch/apple-touch-icon-180x180.png"
+    />
+    <meta
+      name="description"
+      content="在这些异常和困难的时期，有时很难从噪音中分辨出真实的信息。 或者，您可以创建自己的消息，然后像酷孩子一样听。In these unusual and difficult times it's sometimes difficult to sort the real message from the noise. Or you could just create your own message and listen to that like the cool kids do"
+    />
+    <meta
+      property="og:description"
+      content="在这些异常和困难的时期，有时很难从噪音中分辨出真实的信息。 或者，您可以创建自己的消息，然后像酷孩子一样听。In these unusual and difficult times it's sometimes difficult to sort the real message from the noise. Or you could just create your own message and listen to that like the cool kids do"
+    />
+    <meta
+      name="twitter:description"
+      content="在这些异常和困难的时期，有时很难从噪音中分辨出真实的信息。 或者，您可以创建自己的消息，然后像酷孩子一样听。In these unusual and difficult times it's sometimes difficult to sort the real message from the noise. Or you could just create your own message and listen to that like the cool kids do"
+    />
     <style>
       html {
         height: 100%;
@@ -56,28 +72,12 @@
         height: 256px;
       }
     </style>
-
-    <meta
-      name="description"
-      content="在这些异常和困难的时期，有时很难从噪音中分辨出真实的信息。 或者，您可以创建自己的消息，然后像酷孩子一样听。In these unusual and difficult times it's sometimes difficult to sort out the real message from the noise. Or you could just create your own message and listen to that like the cool kids do"
-    />
-    <meta
-      property="og:description"
-      content="在这些异常和困难的时期，有时很难从噪音中分辨出真实的信息。 或者，您可以创建自己的消息，然后像酷孩子一样听。In these unusual and difficult times it's sometimes difficult to sort out the real message from the noise. Or you could just create your own message and listen to that like the cool kids do"
-    />
-    <meta
-      name="twitter:description"
-      content="在这些异常和困难的时期，有时很难从噪音中分辨出真实的信息。 或者，您可以创建自己的消息，然后像酷孩子一样听。In these unusual and difficult times it's sometimes difficult to sort out the real message from the noise. Or you could just create your own message and listen to that like the cool kids do"
-    />
     
     <meta name="geo.region" content="CN-91" />
     <meta name="geo.position" content="22.276774;114.168204" />
     <meta name="ICBM" content="22.276774, 114.168204" />
 
-    <link
-      rel="apple-touch-icon"
-      href="png/apple-touch/apple-touch-icon-180x180.png"
-    />
+
 
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
