最低可行产品

--- a/public/index.html
+++ b/public/index.html
@@ -13,15 +13,15 @@
     />
     <meta
       name="description"
-      content="In these unusual and difficult times..."
+      content="Write your own slogan"
     />
     <meta
       property="og:description"
-      content="In these unusual and difficult times..."
+      content="Write your own slogan"
     />
     <meta
       name="twitter:description"
-      content="In these unusual and difficult times..."
+      content="Write your own slogan"
     />
     <style>
       html {
@@ -205,7 +205,7 @@
               基于 Listingslab's Progressive Web Apps
           </a>
       </h2>
-      <p>In these unusual and difficult times... it's sometimes difficult to sort out the real message from the noise. Or you could just create your own message and listen to that like the cool kids do</p>
+      <p>Write your own slogan it's sometimes difficult to sort out the real message from the noise. Or you could just create your own message and listen to that like the cool kids do</p>
     </noscript>
 
     <div id="app" class="screen">
